hangul rnn sample update

--- a/notebooks/char_rnn_sample_hangul.ipynb
+++ b/notebooks/char_rnn_sample_hangul.ipynb
@@ -63,7 +63,7 @@
       "\n",
       "\n",
       "data_loader.vocab looks like \n",
-      "{'\"': 28, 'ㅢ': 25, 'ㅛ': 38, '1': 58, '9': 64, '\\n': 19, 'ㄷ': 13, 'ㄾ': 70, 'ㅈ': 15, '(': 45, 'ㅄ': 43, '8': 68, 'ㅏ': 3, '>': 75, '5': 63, 'ㅠ': 37, ')': 46, 'ㅜ': 16, '6': 59, '\\x1a': 72, 'ㅀ': 51, 'ㅗ': 9, 'ㅌ': 30, '3': 66, '0': 73, 'ㅃ': 47, 'ㅎ': 14, 'ㅁ': 12, 'ㅣ': 6, 'ㅝ': 36, 'ㄴ': 4, ' ': 1, 'ㄻ': 55, 'ㅖ': 39, 'ㅓ': 11, '.': 24, 'ㅚ': 33, 'ㅉ': 40, 'ㅘ': 26, 'ㄱ': 7, 'ㅂ': 17, 'ㅆ': 22, '!': 52, ':': 57, 'ㄵ': 50, 'ㄺ': 48, 'ㄳ': 60, 'ㅔ': 20, 'ㅊ': 23, '4': 67, 'ㄿ': 56, ',': 27, 'ㅑ': 34, 'ㄶ': 44, '7': 71, 'ㅋ': 42, 'ㄸ': 32, '-': 65, 'ㅍ': 31, 'ㄲ': 29, 'ㅙ': 53, 'ㅞ': 61, '2': 62, 'ㄼ': 54, 'ㅕ': 18, 'ㅒ': 74, 'ㅡ': 8, '_': 69, '?': 41, 'ㅇ': 2, 'ᴥ': 0, 'ㅐ': 21, \"'\": 49, 'ㅟ': 35, 'ㅅ': 10, 'ㄹ': 5} \n",
+      "{'ㅀ': 51, '7': 71, 'ㅟ': 35, 'ㅓ': 11, 'ㅣ': 6, '-': 65, 'ㄷ': 13, 'ㅈ': 15, 'ㅚ': 33, '2': 62, '9': 64, 'ㅒ': 74, 'ㅐ': 21, '?': 41, ')': 46, \"'\": 49, 'ㅡ': 8, 'ㅇ': 2, 'ㄴ': 4, 'ㅛ': 38, 'ㅌ': 30, 'ㄶ': 44, '3': 66, '8': 68, '_': 69, 'ㅖ': 39, 'ㄺ': 48, ':': 57, '\"': 28, 'ㅘ': 26, 'ㄼ': 54, 'ㅏ': 3, 'ㅄ': 43, 'ㄻ': 55, '5': 63, 'ㅆ': 22, 'ㅞ': 61, 'ㅠ': 37, 'ㄸ': 32, '1': 58, 'ㄿ': 56, 'ㅂ': 17, 'ㅅ': 10, ' ': 1, 'ㅔ': 20, 'ㄱ': 7, 'ㅑ': 34, 'ᴥ': 0, '4': 67, 'ㄲ': 29, '>': 75, 'ㅜ': 16, '0': 73, 'ㅎ': 14, 'ㅗ': 9, 'ㄵ': 50, 'ㅉ': 40, 'ㅢ': 25, 'ㅙ': 53, '!': 52, 'ㄾ': 70, '.': 24, 'ㅃ': 47, '\\n': 19, ',': 27, 'ㅝ': 36, 'ㅊ': 23, '6': 59, 'ㄹ': 5, 'ㄳ': 60, '(': 45, 'ㅕ': 18, 'ㅋ': 42, 'ㅍ': 31, '\\x1a': 72, 'ㅁ': 12} \n",
       "\n",
       "\n",
       "type of 'data_loader.chars' is <class 'tuple'>, length is 76\n",
@@ -249,55 +249,59 @@
       "구\n",
       " \n",
       "Prime Text : 누구  => ㄴㅜᴥㄱㅜᴥ \n",
-      "data/nine_dreams/model.ckpt-0\n",
-      "SAMPLED TEXT = ㄴㅜᴥㄱㅜᴥ ?ㅆ>ㅀ79ㄼㅖㅝ5:6ㅜ-8>ㅂ1ㄳㄲㅃ0ㄻㄾ1ㅠㅙㅊ5ㅀ)ㄵ2ㅕ(ㄷ4(ㅊㅎ_ᴥᴥㅌ\u001a>ㅢㅃㅢㅈㅢㅞ 44ㅜㅟ:ㅜㅑ\u001aㅒㄺㅈㅡㄵ72ㅍㅡㅙㅀ0ㅊㅅㅜㅆㅍㅛㄹㄱㅃ>ㄳ_. ㅡㅁㅅㅌ?ㄿㄻㅑ\n",
-      "ㅣㄸㅋㅏㅅㅊ2ㅄㅠㄵㅐㅞㄾㅏㄱㄵㄴ?_ㄿㅎㅋ2ㅢ\u001a8ㅚㅘㅎㄶㅀㄲㅅㅍ6ㅔㄶㅋㅍㅈㅕ'7ㅣ72ㅜㅠㅀㅣ>ㄳㅉㅉ,ㅍㅅᴥㄸㅡㅟ5ㅎ5 3ㄳ(4ㅓ4ㅡㄳㅀㅙㄻㅘ24ㅈㅊ!ㅍㄷㅕㄶㅖ>ㅆㄲ6ㅑ50!.ㅠㅀㄿㅊㅍㅇㅜㅈ(ㅜㅠ!ㄻ\"4ㅕ_')ㅖㅒㅂㄲ(ㅐ.ㅖㅍㄳㅢㄷ!\u001a\"ㅓ\u001a?ㅈㅎㄺㅁ,-ㅗㅠㅅㅏ\u001aㅡ.ㅠㄲㅁ.ㅏㄸㅙㅊ 3> ㅠㄸ896ㅡ\n",
-      "ㅣㅏ!25ㅀ5ㅏㅋㅞㅃㅚ\u001aㅂㅊㅌ5ㅠㄹㅉ.0ㄼㅔㅟㅕ9ㄳ\"ㅄㄶㅒㄻㅀㅞㅗ3ㅇㅙㅑㅍㅄㄷㅑ.ㄿㄵ6ㅈ,ㅠㅑ?ㅑㄾㅅㅄᴥㅞㅉㅌㅌ'ㅀㅂㅙㄸㄿㅉ0ㅜㄻᴥ>ㅂᴥ!\n",
-      ")0ㅅㄱㅛᴥㅋ>ㅉ4ㄾㅃ_ㅁㅈㄶ8ㅄㄵ!ㅓㅎㄱ_ㅔ.ㅆㅇㅍㅘㅅ2ㅏㅌㅁㅡㅁ!ㄹ92ㅣㄻ7)4ㅃ_ㅊ1ㅁㅣㅎㅒㄼㅀㅔㅕㅅㅔ- 'ㅜㄷㅙㄶㄺ_ㄵㅀ?ㅣ-ㄵ(.ㅝ\"\"ㅒㄸㅋ\"ㅝㄲㅡ0ㅁㅜㅙ7ᴥ0!ㅢ 1ㅢ !ㅖㄻㅕㅌ ㄾㄾㄸㅆㅃ>ㄳ7ㅠᴥㅚㅠㄹㅞㅉㅆㄺㄿㅈㅒㅉㄶ?ㅙㄻㅞㅉ\u001a\n",
-      "ㅃㅉㅒ(>ㅖㅆㅕㄷ)ㄺㅋㄾ6ㅑ'ㄺ.16.ㄿㅟㅋㅃㅞㅕㅗㅉㅀ\n",
-      "?ㅣㅃㅌㅎㅍㄱㅑ ㅑㅙㅎㄿ8ㄶㄿㄸㅜㅛᴥㄿㅂㅏㅡㅄㅞㄾㄸ8ㅕ5ㅙㅊ\n",
-      "7ㄻ4ㄱ\u001aㄳㄴ,ㅅㅔㅢ42ㄸㅖㄵㅌ'ㅢ9ㅈㅞ!ㄻ?4( ㄼㄾ1!ㅊ4ㅜㅔㅔㅑㅚㄷ:1ㅚㅈㅣㅀㅛ ㅓㅉ>8ㄷㅅㅓㄳ2ㄾ\n",
-      "\u001aㅏᴥㅊㅊㅇㅍㅕ6ㅂㅑ5ㅐ8ㅕ-(ㅑ8ㄴㄺ>ㅙㄷㅞㅌㅀㄼㅔᴥㅈ,\u001aㄺ3ㅚㄶㅡㅞㅀㅛㅞㅚㅠㅡㄳㅇ4ㅘㅔㅍㄱㅍㅜㅉ'ㄳㅣ6ㅆㄻ\n",
-      "ㄳㅟㄲ6ㄾ)ㄸ)ㄺㅋ\"3ㅎㅃㅘ1ㅗㅜ-ㅅㅅㅇㅙㄸㅠㅟ!ㄼ6ᴥㅚㅟㅐㄹ8ㅎㅆ0ㅌㅚㄹ3ㅐㄿㄾㅔ18ㄿㅛ28.1'ㄲ6ㅍㅒㅐㄻㅏㅑㅈ6?66ㅟ>ㅟㄴㅈ?ㅀㅉㅏ7ㅚ3ㅓㅔㅍ5ㅗㅏㅋ:ㅌㄳㅛㅌ6ㅅㅡㅉㅅㅣㄵㄿ\"ㅇ:ㅊㄲㅂ8\"('ㅠㅁㅊㄱㅙㅃㅔㅑㄼㅚㅂㄸㄺㅛㅎㅚㄲㄲㄸ3ᴥㅚㅅ7ㅞㅅㅖㅓㅠㅑㄻㅉㅁㅝㅑㅕㄹㅆᴥㄴㅉ9\"ㄺㅋ25\",ㄺㅚㅂᴥㅟ5'8:ㅣㅓㅟ.ㅓ0ㅂㅛ-9(ㅋㅒㄴㄼㄵ-ㅙ_,ㅆㄾㅠ,ㅈᴥㅞ3ㅛㅃㅡ\u001aㅉㅢㅀㅂㄸㄴㅏㄾㄳ\"2)ㅀㅝㅍㅢㅁㅃ!ㅖㄵㅃㅑㅜㅈㅙ>66ㄸ\u001aᴥㅠㅞㅀᴥㅎㄼㄱㄳㅙㅅㅣㅣ ㅟㅋㅃㅡㄾㅞㅉ4ㅐㅊ2-ㄲㄺㅜㄲㅕㅅ6._ㄷ\n",
-      "ㄾ1ㅗㅏㅖㄳㅚ9ㄹ08?4ㄼㅢ2ㅚ0.ㄶㅣㅉ7ㅆㄵ(ㅎ63ㅎㄾㅣ3ㅕㅚㅌㅟㄱㅆㄸ!\u001aᴥㅅ'>>ㅂㅐㅠㄵㅗㅐㅕ0ㄷㅐㅑㅣㄹㅁ3ㅜ.\n",
-      "ㄻㅜㅅ(ㄷ ㄻ'ㄶㅍㅛㄷㅇ1ㄸㄾㅗㅊㅆㅙ ㅀㅣ4ㅅ.ㅕㄾㅙㅅㄼ4ㅓ9ㅕㅠ5ㅇ:ㅀ7ㅓㅣ_ㅀㅋ>ㄹᴥㅛ\"5ㅆㅋㅋㅚㅢㄲㄾㅎㅖ)ㅢ_ㄿㅕㅙㅉㅂ2ㅗ\n",
-      "ㅜㅡ_ㅜㄼㅓ ㅐㅅㅆㅒ:)_\n",
-      "ㅞㅏㅡㅘㅎ?ㅁㅓㄱㅚㅏㅗ4ㅆㅢㅊ\n",
-      "ㅌ1ㅉㅄ:ㅔㄼㄿㅗ(ㅕ!7ㅌᴥ5ㅏ>ㅕ:ㅁㅡㄱ)4ㅆ\n",
-      "\u001a4ㅃㅊㅟ3.ㄲㅟᴥㅅㅡ-ㅣㄴㄳ:ㅓㅅㅆㅇ98ㅄㅢㅕㅇㅝ?ㄲㅐㄴㄷㅕ)ㅄㅅᴥ,4ㄱㅡ7-- ᴥㅊ5ㄲㄷㅕㅁㅗ'ㅡㄴㅌㅒㄾㅒ'ㅍㄼ0ㅍㅂㅃ(2ㄷㅄ6ㅚ ,ㄲㅝ>ㅙㅔㅕㅔㅛ82\n",
-      "ㅂ\u001aㅢ\u001aㄺ8ㄾ_ㅎ_3ㅈㅘㅚㅙ.ㅄㅑㅇ76:ㅃ,ㅜ2ㅄ5ㅊㄵㅅㄲㄵ\"ㅢ1ㅕ'(,ㄺ4ㅉㄳㅎ_(ㅟㅇㅋㄴㅍㄲㅂ9ㅎㅚㅖㅀㅑㄱ!:ㄸ8ㄼㅌㅗ5ㅎㅚㅀ7ㅛᴥ ㅜ!ㅕㅅ0ㄱ2ᴥ\n",
-      ",ㄱ3?ㅓ_ㅕㅒ(ㅔㄺㅔㄻㅘ ㅣ(ㄳ>ㅒ5ㅂ7ㅅㄲㅌ9\"ㅀㄾ\"ㅢㅅㅅㅛㅟㅛㄼㅓ6)ㅣㄺㅞㅘㅝ(\u001a:ㄳㅅㅂㅐㄵ\"ㅣ8ㅌ?_ㅈㅁㅏㅣᴥㅒㄾㅌㅆㅍ\"ㅄㅊㅅㅎㅍ3ㅅㅏㅙㅏ\u001aㅎㅍㄹㄺㅂㅋ 5ㅆㅍ(ㄻㄿㅅㄶ\n",
-      "ㄴㅐㅅㅚㅂㅘᴥㅈㄼㅊ,!ㄷ?ㅜ7ㅔㄾㅜㅎㄸ9ㄳㅝㅜ7,ㄲㅚ7,ㅀㅆㅀㄼ0-ㅍㅓ ㄶ\u001aㅞㅏㅎㅀ0ㅚ\u001a62ㅚㅛ\n",
-      ">ㅏㄶㄹㅅㅕㄹㅀ0ㅗㅐㄸㄱㅆ2\u001aㄿㅊㅁㅡㄸㅖㄴㄾㅏㅋㅐㅘㅍ\n",
-      "ㅞㅚㅖㅢㄹ\u001a:ㅂㅅㅐ>>ㅍ-?!ㅟ)ㅓ7ㅒ6ㅞㅃㄹㄲ3ㅙㄸㅅ2?ㅣㅉㅢㅓㅗㅔㅙ3ㅋㅂㅆㅐ\u001aㅍㅜㅂ?ㅌㅍ347ㅋㅠ(\u001aㅈ!ㄳㄾ_ㅝㄲㅝㅋㅒㅊㄷ7ㅉ5ㄻ7ㅜㄳㄾㅇ5ㅜ3ㄹ7ㄵ ㄾㄼ419ㅉㅛ6ㄷ48_\"3ㅞ7ㅇ(ㅊㅎㅙ-ㅛᴥㄿㅡㅏㄼ,7ㅗㅀㅛㅒ8.ㅖㅢ_5ㅠ!_.ㄲㅘㅚㄱㅚ3ㄾㄼᴥㅐㅀㅈㅉ:3ㅍㅌ\n",
-      "3>ㅚㅘㅂㅗ9ㅝ)ㅒ9ㅎㅐㅅㅎ>ㄺㅓ)5ㄹㅏㅇㄸㅄ3_6ㄴㄲㅆㅝㅔㄹ5ㅑㅀㄼㅟㅇ,ㅁㅚㅟㅣㅊᴥㅌㅈㅄ2ㅞㅠㅈㅉ\"ㅠㅐ:,!ㅋㅐㅑㅟㄳ4ㅙㄶ>ㅚㅘㅀㅁㅎㅖㅞㅔㅀㅃㅑㅖㅙ(ㅄㄸᴥㅅㅄㅃㅌ9ㅣㅟᴥ09ㅞㄶㅣㄴㅞᴥㄳㅟ\u001a4ㅡㅉ\u001aㅛ>7(ㅏ_72ㄲㅜ7ㅢㅅ7ㅉㅖㅓㄶㅔㅈ>ㅘㄳㅁㅜㄻㅇㅝㄿㅄㅄᴥ59ㄼ(ㅑ\")-ㅄ\u001aㅘᴥㅋㄱㅑㄻㄹㄷㅈㅡ8ㅔ6ㅑㄱㄹㅝㅆㅁㅐ.ㅐㅛㅖ6ㅙㄺᴥㅉ5-2:.ㅍㅜㄹㄾㅔ6\n",
-      "ㅚㅛㅜㅙ0ㅅ5ㅟㅣㄳ6:ㅡㅃㅗ>ㅓ)ㅋ(28ㄵㄿㅟㅟㅣ4'ㅢ(ㅒㅜ,7>ㅘㅌ?ㄲ5ㄻㅂㅘㅏㅟㅋ6209ㅄㅉㄹ2ㅁㅃ-\u001aㅉㅂㄻㅣㅘᴥㅙㄺㅡㅠㅎ 0ㅗㅞㅙㅣᴥ5ㅗㅝ\n",
-      "ᴥ!0ㅟ8\u001aㄶㅄㅖㄼㄶㅚㅣ5ㄲ)(\u001aㅃㅘㄻㅎㅓᴥ:ㄴ)5ㅢㅜㅐㅙㅕㅋㄲ9ㄷ\u001aㅌ!ㅐ8ㅢㅐㅀㄾㄼ0ㄳ'ㄱㄱㅉㅉㅏㅚㅁ58ㄲ,ㅆㅙㅈ9ㅙㅊㄾ2-ㅁㅔㅌㅜ2(ㅔㅡㄿㄶㄻ8ㅖㅕㅃㄶ,ㄴㅚ0ㄼㅑ4ㄵㅋㅎㅊㅉㅚㅡ\n",
+      "data/nine_dreams/model.ckpt-99000\n",
+      "SAMPLED TEXT = ㄴㅜᴥㄱㅜᴥ ㅅㅓㅇᴥㄳㅐㅅᴥㅇㅡㄹᴥ ㅇㅣᴥㅁㅣᴥ ㅁㅗㅅᴥㅎㅏㄹᴥ ㅎㅘㅇᴥㅅㅏㄴᴥㅇㅡᴥㄹㅗᴥ ㅊㅗᴥㅁㅕㄴᴥㅎㅏᴥㄴㅣᴥ, ㅇㅣᴥㅇㅔᴥ ㅅㅜㅁᴥㅇㅡㄹᴥ \n",
+      "ㄱㅏㅂᴥㄱㅗᴥ, ㄱㅣᴥㄷㅓᴥㄲㅔᴥ ㅇㅏᴥㄹㅚᴥㄱㅣᴥㄹㅡㄹᴥ, \n",
+      "  \"ㅇㅝㄹᴥㅇㅘㅇᴥㅇㅣᴥ ㄷㅐᴥㄷㅏㅂᴥㅎㅏᴥㄷㅚᴥ\n",
+      "  \"ㄴㅏㅇᴥㅈㅏᴥ ㅇㅣᴥ ㅅㅗᴥㅈㅓᴥㄱㅏᴥ ㄷㅐㄱᴥ ㄸㅓᴥㅇㅓᴥ ㅈㅏㅇᴥㅊㅓㅂᴥㅇㅡㄹᴥ ㄴㅐᴥㄹㅣᴥㅅㅕㅆᴥㅇㅡᴥㄴㅣᴥ ㅈㅔᴥㄱㅗㅇᴥㅇㅣᴥㅇㅗᴥ?\"\n",
+      "  \"ㅇㅕㅇᴥㅇㅑㅇᴥㄱㅗㅇᴥㅈㅜᴥㄱㅏᴥ ㅅㅗᴥㅁㅐᴥㄱㅏᴥ ㄷㅏᴥㄱㅗᴥㅎㅏᴥㅇㅕᴥ ㅇㅌᴥㅇㅜᴥㄴㅏᴥ ㅇㅕㅁᴥㄹㅏᴥㄷㅏᴥㅇㅘᴥ ㅇㅗᴥㄴㅡㄹᴥㅂㅓㅂᴥㄱㅗᴥ ㄴㅏㅁᴥㄱㅗᴥ ㅇㅓㅄᴥㄴㅏᴥㅇㅣᴥㄲㅏᴥ?\"\n",
+      "  ㅅㅓㅁᴥㅇㅝㄹᴥㅇㅣᴥ ㄷㅏᴥㅅㅣᴥ ㅎㅏᴥㅇㅕᴥㄱㅡㅁᴥㄲㅔᴥ ㄷㅜᴥㄹㅣᴥㄱㅏᴥ ㅌㅡㄹᴥㄹㅣㅁᴥㅇㅣᴥ ㅅㅣㅁᴥㅂㅏㅇᴥㅎㅏㄴᴥ ㅇㅏᴥㅂㅕㄹᴥㅍㅜㄴᴥㅇㅡㄹᴥ ㅅㅏᴥㄹㅡㄹᴥ ㄸㅏᴥㄹㅡᴥㄷㅗᴥㄹㅏᴥ. \n",
+      "ㄸㅗᴥㅎㅏㄴᴥ ㅅㅣㄴᴥㄱㅗㅇᴥㅁㅕㅇᴥㅇㅡㅁᴥ, ㅈㅣㄱᴥㄴㅕᴥㄱㅏᴥ ㄱㅡᴥㄷㅐᴥㅈㅘᴥㅇㅘᴥ ㅁㅓㄷᴥㄱㅗᴥ ㅈㅔᴥ ㅂㅜᴥㅁㅗᴥㅈㅣᴥ ㄴㅗㅅᴥㅎㅏᴥㅇㅕㅆᴥㄷㅏᴥ. \n",
+      "\n",
+      "    ㄱㅗㄱᴥㅈㅓㄱᴥㅇㅢᴥ ㅈㅓㄴᴥㄱㅜㄱᴥ(ㅇㅏㄴᴥㅈㅔᴥ(ㅅㅏㅁᴥㅂㅗㄱᴥ, \n",
+      " ㅅㅣㄴᴥㅅㅓㅇᴥㄷㅗᴥ ㅎㅗㄴᴥㅇㅕㄴᴥㅇㅡㄴᴥ ㅅㅓㄱᴥㅂㅜㄴᴥㅊㅜᴥㅅㅓㅇᴥㅇㅣㄹᴥ ㄴㅏㅇᴥㅈㅏᴥㄱㅏᴥ ㅇㅓㅄᴥㄴㅡㄴᴥ ㅁㅏㄹᴥㅇㅣᴥㄹㅗᴥㄷㅏᴥ.\"\n",
+      "  ㅇㅣᴥㅇㅔᴥ ㅊㅜㄴᴥㅇㅜㄴᴥㅇㅣᴥ ㅇㅣᴥㄹㅡᴥㄱㅣᴥㄹㅡㄹᴥ\n",
+      "  'ㄴㅓᴥㅎㅢᴥㄹㅡㄹᴥ ㄴㅐᴥㄱㅕᴥ ㅇㅗㄷᴥㅈㅏㄴᴥ ㄱㅗㅇᴥㅈㅜᴥㄱㅏᴥ ㄷㅡㄹᴥㅇㅓᴥㄱㅏᴥㄱㅔᴥ ㅎㅏㄹᴥ \n",
+      "ㄱㅓㅅᴥㅇㅣᴥㄹㅣᴥㅇㅛᴥ. ㅅㅏㅇᴥㅅㅓᴥㄲㅔᴥㅅㅓᴥ ㅈㅗᴥㅊㅓㅇᴥㅇㅡㄹᴥ ㄴㅏᴥㄱㅔᴥ ㅎㅏᴥㄷㅓᴥㄹㅏᴥ. \n",
+      "  \"ㅅㅐᴥㅅㅗᴥ ㄱㅖᴥㄹㅏㄴᴥㅎㅣᴥ ㄷㅡㄹᴥㅇㅓᴥㄱㅏᴥ ㄱㅖᴥㄹㅏㅇᴥㅇㅔᴥㄱㅔᴥ ㄴㅐᴥㅁㅜᴥㄹㅡㄹᴥ ㅉㅔᴥㅇㅓᴥ ㅈㅗᴥㅎㅏᴥㄱㅗᴥ ㅇㅣㅆᴥㅇㅡㅁᴥㄱㅘᴥ ㅇㅓᴥㅉㅣᴥ ㅅㅓㄹᴥㅇㅣㄴᴥㅈㅡㅌᴥㄱㅔᴥ ㅁㅏㄹᴥㅆㅡㅁᴥㅎㅐㅆᴥㄷㅓᴥㄹㅏᴥ. \n",
+      "  ㄱㅓᴥㅁㅜㄴᴥㄱㅗᴥㅇㅢᴥ ㅈㅏᴥㅈㅜᴥ ㄷㅗᴥㅂㅓㄴᴥㅇㅣᴥ ㄷㅗㄹᴥㅇㅣᴥㄹㅗᴥ ㄱㅟᴥㄹㅗㄴᴥㅎㅏᴥㄴㅡᴥㄴㅑᴥ? ㄴㅓㅀᴥㅇㅓᴥ ㄱㅜㄴᴥㅅㅏᴥㅇㅢᴥ ㅅㅗㄱᴥㅇㅣᴥㅅㅣᴥㅇㅓㅆᴥㄴㅏᴥㅇㅣᴥㄷㅏᴥ.\"\n",
+      "  ㅎㅏㄴᴥㄹㅣㅁᴥㅇㅣᴥ ㅅㅏㄹᴥㅅㅓㄴᴥㅊㅣᴥㄹㅡㄹᴥ ㅅㅏㅁᴥㄱㅣᴥㄱㅗᴥㄴㅡㄴᴥ ㄱㅓㅅᴥㄷㅡㄹᴥㅇㅣᴥㄱㅗᴥ, ㅍㅜㄹᴥㅅㅏᴥㅂㅚᴥㄹㅗᴥ ㅎㅏㅁᴥㅇㅏᴥㄹㅗᴥㅅㅓᴥ ㅇㅛㄴᴥㅌㅣㅁᴥㅎㅏᴥㄹㅏᴥㄴㅏᴥㄴㅣᴥ ㅁㅓㄹᴥㄹㅣᴥ ㅅㅏㅇᴥㄱㅗㅇᴥㄲㅔᴥㅅㅓᴥ ㅇㅣᴥㅇㅔᴥ ㅇㅟᴥㅇㅓㅊᴥ(ㄱㅏㄴᴥㅅㅓㅇᴥㅎㅏᴥㅇㅗᴥㅁㅐᴥ ㅅㅡㄹᴥㅎㅏᴥㄹㅡㄹᴥ ㅎㅏᴥㄱㅣᴥ \n",
+      "ㅇㅓㅄᴥㄱㅔㅆᴥㄱㅏᴥ ㅇㅏᴥㄹㅣᴥㄷㅓㄼᴥㅇㅔᴥㄱㅔᴥ ㄲㅜㄺᴥㅇㅓᴥㄴㅏᴥㄹㅏᴥ ㅎㅏㅁᴥㅈㅜᴥㅈㅣᴥ ㅇㅏㄶᴥㅇㅡㅁᴥㅇㅣᴥ ㄷㅏᴥ ㅅㅓᴥㅂㅗᴥㄷㅐㄱᴥ \n",
+      "ㅈㅔᴥㅅㅏᴥㄴㅡㄴᴥ ㅇㅏㄴᴥㄷㅡㅅᴥ(ㅅㅗㄴᴥㅈㅣㄹᴥㅇㅢᴥ ㅈㅣᴥㅂㅜㄱᴥ ㅇㅛㅌᴥㄱㅘᴥ ㄴㅏㄴᴥㅇㅑㅇᴥㄱㅜㄱᴥㅈㅜᴥㄲㅔᴥㅅㅓᴥ ㅎㅚᴥㅂㅗㄱᴥ \n",
+      "ㅂㅜㄹᴥㅂㅏᴥㅇㅔᴥ ㅅㅔᴥㅅㅏㅇᴥㅎㅏᴥㅁㅕᴥ ㅅㅗᴥㅇㅠᴥㄴㅡㄴᴥ ㅂㅏᴥㅇㅗㅂᴥㄴㅏᴥㅇㅣᴥㄷㅏᴥ. ㄴㅐᴥ ㅇㅓᴥㅅㅣㅅᴥㅅㅏㅂᴥ ㄱㅕㅇᴥㅇㅣᴥ ㄷㅏᴥㄸㅏㄴᴥㅎㅐㅆᴥㄷㅏᴥ. \n",
+      "  ㄱㅖᴥㅅㅓㄱᴥㅇㅢᴥ ㅅㅏᴥㅇㅠᴥㅇㅣㅁᴥㅇㅣᴥ ㅂㅜㄴᴥㅂㅗᴥㄷㅏᴥ ㅅㅐㅇᴥㄱㅟᴥㅎㅏᴥㄱㅗᴥ ㅅㅗㄱᴥㅇㅔᴥ ㄸㅏᴥㄹㅏㅆᴥㅇㅡᴥㄴㅣᴥ ㄱㅡᴥ ㄸㅡㅅᴥㅇㅡㄴᴥ ㄸㅏㄹᴥㅇㅣᴥㅇㅓㅆᴥㄷㅏᴥ. ㅅㅗᴥㅇㅠᴥㄴㅡㄴᴥ ㅎㅗㄱᴥㅅㅣᴥ ㅂㅜᴥㄹㅡᴥㅅㅣᴥㄴㅣᴥ ㄱㅡᴥ ㅅㅗㄱᴥㅅㅔᴥ\n",
+      "  ㅅㅓㅇᴥㄱㅜㅇᴥㅇㅡㄹᴥ ㅁㅏㄹᴥㅎㅏᴥㄴㅡㄴᴥ ㅅㅣᴥㄴㅐᴥㄹㅡㄹᴥ ㅇㅣᴥㄴㅣᴥ ㅅㅗᴥㅈㅓᴥㅇㅢᴥ ㅈㅣㅂᴥㅇㅡㄹᴥ ㅁㅏㄹᴥㅆㅡㅁᴥㄷㅡㄹᴥㄹㅣㅁᴥㅇㅡㄹᴥ ㄱㅓᴥㅊㅜᴥㅇㅔᴥ ㅎㅏᴥㅁㅕㄴᴥ (ㅎㅘᴥㄹㅏㅇᴥㅎㅏᴥㅇㅕᴥ ㅊㅓㅂᴥㄷㅡㄹᴥㅇㅔᴥㄱㅔᴥ ㅁㅐᴥㅇㅜᴥ ㄱㅡᴥ ㅊㅗㄱᴥㅎㅣᴥ ㄷㅚㄴᴥ \n",
+      "ㄱㅓㅅᴥㅇㅣᴥ ㄸㅗᴥㅎㅏㄴᴥ ㄲㅜㄴᴥㅇㅣㄹᴥ ㄷㅗㅇᴥㅂㅓㄱᴥㅇㅔᴥㅅㅓᴥ ㄷㅗㄹᴥㄹㅏㅆᴥㄱㅗᴥ, ㄴㅏㅁᴥㅂㅗㄱᴥㅇㅢᴥ ㄱㅠᴥㄴㅕㄴᴥ ㄷㅓᴥㄴㅡㄴᴥ ㅅㅓㅁᴥㄱㅘᴥ \n",
+      "ㄱㅏㅌᴥㅅㅣᴥㅇㅗㄴᴥㅈㅓㄱᴥ ㄱㅏᴥㅊㅓᴥㅎㅏᴥㅁㅕᴥ ㄴㅐᴥ ㄴㅏㄴᴥㅈㅗㅇᴥㅈㅗᴥㄱㅣᴥ ㅈㅔᴥㅈㅗㅇᴥㅎㅜᴥㅇㅔᴥㄷㅡㄹᴥㅇㅗᴥ \n",
+      "ㅂㅏᴥㅇㅠᴥㅂㅜᴥㄹㅓᴥ ㅈㅣㄴᴥㅊㅓㅅᴥㅇㅡㄹᴥ ㅎㅏㄱᴥㅇㅡᴥㄹㅗᴥㅈㅣᴥ \n",
+      "ㅇㅏ\n",
       "\n",
       "-- RESULT --\n",
-      "누구 ?ㅆ>ㅀ79ㄼㅖㅝ5:6ㅜ-8>ㅂ1ㄳㄲㅃ0ㄻㄾ1ㅠㅙㅊ5ㅀ)ㄵ2ㅕ(ㄷ4(ㅊㅎ_ㅌ\u001a>ㅢ삊ㅢㅞ 44ㅜㅟ:ㅜㅑ\u001aㅒㄺ즍72프ㅙㅀ0ㅊ숬푥ㅃ>ㄳ_. ㅡㅁㅅㅌ?ㄿㄻㅑ\n",
-      "ㅣㄸ캇ㅊ2ㅄㅠㄵㅐㅞㄾㅏㄱㄵㄴ?_ㄿㅎㅋ2ㅢ\u001a8ㅚㅘㅎㄶㅀㄲㅅㅍ6ㅔㄶㅋㅍ져'7ㅣ72ㅜㅠㅀㅣ>ㄳㅉㅉ,ㅍㅅ뜨ㅟ5ㅎ5 3ㄳ(4ㅓ4ㅡㄳㅀㅙㄻㅘ24ㅈㅊ!ㅍ뎒ㅖ>ㅆㄲ6ㅑ50!.ㅠㅀㄿㅊㅍ웆(ㅜㅠ!ㄻ\"4ㅕ_')ㅖㅒㅂㄲ(ㅐ.ㅖㅍㄳㅢㄷ!\u001a\"ㅓ\u001a?ㅈㅎㄺㅁ,-ㅗㅠ사\u001aㅡ.ㅠㄲㅁ.ㅏ뙟 3> ㅠㄸ896ㅡ\n",
-      "ㅣㅏ!25ㅀ5ㅏ퀘뾔\u001aㅂㅊㅌ5ㅠㄹㅉ.0ㄼㅔㅟㅕ9ㄳ\"ㅄㄶㅒㄻㅀㅞㅗ3왜ㅑㅍㅄ댜.ㄿㄵ6ㅈ,ㅠㅑ?ㅑㄾㅅㅄㅞㅉㅌㅌ'ㅀ봬ㄸㄿㅉ0ㅜㄻ>ㅂ!\n",
-      ")0ㅅ교ㅋ>ㅉ4ㄾㅃ_ㅁㅈㄶ8ㅄㄵ!ㅓㅎㄱ_ㅔ.ㅆㅇ퐛2ㅏㅌ믐!ㄹ92ㅣㄻ7)4ㅃ_ㅊ1밓ㅒㄼㅀㅔㅕ세- 'ㅜ됂ㄺ_ㄵㅀ?ㅣ-ㄵ(.ㅝ\"\"ㅒㄸㅋ\"ㅝ끄0무ㅙ70!ㅢ 1ㅢ !ㅖㄻㅕㅌ ㄾㄾㄸㅆㅃ>ㄳ7ㅠㅚㅠ뤠ㅉㅆㄺㄿ쟤ㅉㄶ?ㅙㄻㅞㅉ\u001a\n",
-      "ㅃ쨰(>ㅖ쎧)ㄺㅋㄾ6ㅑ'ㄺ.16.ㄿㅟㅋ쀄ㅕㅗㅉㅀ\n",
-      "?ㅣㅃㅌㅎㅍ갸 ㅑㅙㅎㄿ8ㄶㄿ뚜ㅛㄿ바ㅡㅄㅞㄾㄸ8ㅕ5ㅙㅊ\n",
-      "7ㄻ4ㄱ\u001aㄳㄴ,세ㅢ42뗹ㅌ'ㅢ9줴!ㄻ?4( ㄼㄾ1!ㅊ4ㅜㅔㅔㅑㅚㄷ:1ㅚ짏ㅛ ㅓㅉ>8ㄷ섟2ㄾ\n",
-      "\u001aㅏㅊㅊㅇ펴6뱌5ㅐ8ㅕ-(ㅑ8ㄴㄺ>ㅙ뒡ㅀㄼㅔㅈ,\u001aㄺ3ㅚㄶㅡㅞㅀㅛㅞㅚㅠㅡㄳㅇ4ㅘㅔㅍㄱ푸ㅉ'ㄳㅣ6ㅆㄻ\n",
-      "ㄳㅟㄲ6ㄾ)ㄸ)ㄺㅋ\"3ㅎ뽜1ㅗㅜ-ㅅㅅ왜뜌ㅟ!ㄼ6ㅚㅟㅐㄹ8ㅎㅆ0퇼3ㅐㄿㄾㅔ18ㄿㅛ28.1'ㄲ6퍠ㅐㄻㅏㅑㅈ6?66ㅟ>ㅟㄴㅈ?ㅀ짜7ㅚ3ㅓㅔㅍ5ㅗㅏㅋ:ㅌㄳㅛㅌ6스ㅉ싡ㄿ\"ㅇ:ㅊㄲㅂ8\"('ㅠㅁㅊ괘뻬ㅑㄼㅚㅂㄸㄺㅛ횎ㄲㄸ3ㅚㅅ7ㅞ셰ㅓㅠㅑㄻㅉ뭐ㅑㅕㄹㅆㄴㅉ9\"ㄺㅋ25\",ㄺㅚㅂㅟ5'8:ㅣㅓㅟ.ㅓ0뵤-9(컌ㄼㄵ-ㅙ_,ㅆㄾㅠ,ㅈㅞ3ㅛ쁘\u001a쯿ㅂㄸ낥ㄳ\"2)ㅀㅝ픰ㅃ!ㅖㄵ뺘ㅜ좨>66ㄸ\u001aㅠㅞㅀㅎㄼㄱㄳㅙ시ㅣ ㅟㅋ쁥ㅞㅉ4ㅐㅊ2-ㄲㄺㅜ꼇6._ㄷ\n",
-      "ㄾ1ㅗㅏㅖㄳㅚ9ㄹ08?4ㄼㅢ2ㅚ0.ㄶㅣㅉ7ㅆㄵ(ㅎ63ㅎㄾㅣ3ㅕㅚ튁ㅆㄸ!\u001aㅅ'>>배ㅠㄵㅗㅐㅕ0대ㅑㅣㄹㅁ3ㅜ.\n",
-      "ㄻㅜㅅ(ㄷ ㄻ'ㄶ푣ㅇ1ㄸㄾㅗㅊ쐐 ㅀㅣ4ㅅ.ㅕㄾㅙㅅㄼ4ㅓ9ㅕㅠ5ㅇ:ㅀ7ㅓㅣ_ㅀㅋ>ㄹㅛ\"5ㅆㅋ쾨ㅢㄲㄾ혜)ㅢ_ㄿㅕㅙㅉㅂ2ㅗ\n",
-      "ㅜㅡ_ㅜㄼㅓ ㅐㅅ썌:)_\n",
-      "ㅞㅏㅡㅘㅎ?먹ㅚㅏㅗ4씣\n",
-      "ㅌ1ㅉㅄ:ㅔㄼㄿㅗ(ㅕ!7ㅌ5ㅏ>ㅕ:믁)4ㅆ\n",
-      "\u001a4ㅃ취3.뀌스-ㅣㄴㄳ:ㅓㅅㅆㅇ98ㅄㅢㅕ워?깬ㄷㅕ)ㅄㅅ,4그7-- ㅊ5ㄲ뎜ㅗ'ㅡㄴ턡ㅒ'ㅍㄼ0ㅍㅂㅃ(2ㄷㅄ6ㅚ ,꿔>ㅙㅔㅕㅔㅛ82\n",
-      "ㅂ\u001aㅢ\u001aㄺ8ㄾ_ㅎ_3좌ㅚㅙ.ㅄㅑㅇ76:ㅃ,ㅜ2ㅄ5ㅊㄵㅅㄲㄵ\"ㅢ1ㅕ'(,ㄺ4ㅉㄳㅎ_(ㅟㅇㅋㄴㅍㄲㅂ9회ㅖㅀㅑㄱ!:ㄸ8ㄼ토5횛7ㅛ ㅜ!ㅕㅅ0ㄱ2\n",
-      ",ㄱ3?ㅓ_ㅕㅒ(ㅔㄺㅔㄻㅘ ㅣ(ㄳ>ㅒ5ㅂ7ㅅㄲㅌ9\"ㅀㄾ\"ㅢㅅ쇼ㅟㅛㄼㅓ6)ㅣㄺㅞㅘㅝ(\u001a:ㄳㅅ밵\"ㅣ8ㅌ?_ㅈ마ㅣㅒㄾㅌㅆㅍ\"ㅄㅊㅅㅎㅍ3사ㅙㅏ\u001aㅎㅍㄹㄺㅂㅋ 5ㅆㅍ(ㄻㄿㅅㄶ\n",
-      "냇ㅚ봐ㅈㄼㅊ,!ㄷ?ㅜ7ㅔㄾㅜㅎㄸ9ㄳㅝㅜ7,꾀7,ㅀㅆㅀㄼ0-퍼 ㄶ\u001aㅞㅏㅎㅀ0ㅚ\u001a62ㅚㅛ\n",
-      ">ㅏㄶㄹ셜ㅀ0ㅗㅐㄸㄱㅆ2\u001aㄿㅊ므뗸ㄾㅏ캐ㅘㅍ\n",
-      "ㅞㅚㅖㅢㄹ\u001a:ㅂ새>>ㅍ-?!ㅟ)ㅓ7ㅒ6ㅞㅃㄹㄲ3ㅙㄸㅅ2?ㅣ쯰ㅓㅗㅔㅙ3ㅋㅂ쌔\u001a풉?ㅌㅍ347큐(\u001aㅈ!ㄳㄾ_ㅝ꿬ㅒㅊㄷ7ㅉ5ㄻ7ㅜㄳㄾㅇ5ㅜ3ㄹ7ㄵ ㄾㄼ419쬬6ㄷ48_\"3ㅞ7ㅇ(ㅊ홰-ㅛㄿㅡㅏㄼ,7ㅗㅀㅛㅒ8.ㅖㅢ_5ㅠ!_.꽈ㅚ괴3ㄾㄼㅐㅀㅈㅉ:3ㅍㅌ\n",
-      "3>ㅚㅘ보9ㅝ)ㅒ9햇ㅎ>ㄺㅓ)5랑ㄸㅄ3_6ㄴㄲ쒀ㅔㄹ5ㅑㅀㄼㅟㅇ,뫼ㅟㅣㅊㅌㅈㅄ2ㅞㅠㅈㅉ\"ㅠㅐ:,!캐ㅑㅟㄳ4ㅙㄶ>ㅚㅘㅀㅁ혜ㅞㅔㅀ뺘ㅖㅙ(ㅄㄸㅅㅄㅃㅌ9ㅣㅟ09ㅞㄶㅣ눼ㄳㅟ\u001a4ㅡㅉ\u001aㅛ>7(ㅏ_72꾸7ㅢㅅ7쪠ㅓㄶㅔㅈ>ㅘㄳ묾웚ㅄㅄ59ㄼ(ㅑ\")-ㅄ\u001aㅘㅋ걂ㄹㄷ즈8ㅔ6ㅑㄱ뤘매.ㅐㅛㅖ6ㅙㄺㅉ5-2:.풀ㄾㅔ6\n",
-      "ㅚㅛㅜㅙ0ㅅ5ㅟㅣㄳ6:ㅡ뽀>ㅓ)ㅋ(28ㄵㄿㅟㅟㅣ4'ㅢ(ㅒㅜ,7>ㅘㅌ?ㄲ5ㄻ봐ㅏㅟㅋ6209ㅄㅉㄹ2ㅁㅃ-\u001aㅉㅂㄻㅣㅘㅙㄺㅡㅠㅎ 0ㅗㅞㅙㅣ5ㅗㅝ\n",
-      "!0ㅟ8\u001aㄶㅄㅖㄼㄶㅚㅣ5ㄲ)(\u001a뽦허:ㄴ)5ㅢㅜㅐㅙㅕㅋㄲ9ㄷ\u001aㅌ!ㅐ8ㅢㅐㅀㄾㄼ0ㄳ'ㄱㄱㅉ짜ㅚㅁ58ㄲ,쐦9ㅙㅊㄾ2-멭ㅜ2(ㅔㅡㄿㄶㄻ8ㅖㅕㅃㄶ,뇌0ㄼㅑ4ㄵㅋㅎㅊ쬐ㅡ\n"
+      "누구 성ㄳㅐㅅ을 이미 못할 황산으로 초면하니, 이에 숨을 \n",
+      "갑고, 기더께 아뢰기를, \n",
+      "  \"월왕이 대답하되\n",
+      "  \"낭자 이 소저가 댁 떠어 장첩을 내리셨으니 제공이오?\"\n",
+      "  \"영양공주가 소매가 다고하여 ㅇㅌ우나 염라다와 오늘법고 남고 없나이까?\"\n",
+      "  섬월이 다시 하여금께 두리가 틀림이 심방한 아별푼을 사를 따르도라. \n",
+      "또한 신공명음, 직녀가 그대좌와 먿고 제 부모지 놋하였다. \n",
+      "\n",
+      "    곡적의 전국(안제(삼복, \n",
+      " 신성도 혼연은 석분추성일 낭자가 없는 말이로다.\"\n",
+      "  이에 춘운이 이르기를\n",
+      "  '너희를 내겨 옫잔 공주가 들어가게 할 \n",
+      "것이리요. 상서께서 조청을 나게 하더라. \n",
+      "  \"새소 계란히 들어가 계랑에게 내무를 쩨어 조하고 있음과 어찌 설인즡게 말씀했더라. \n",
+      "  거문고의 자주 도번이 돌이로 귀론하느냐? 넗어 군사의 속이시었나이다.\"\n",
+      "  한림이 살선치를 삼기고는 것들이고, 풀사뵈로 함아로서 욘팀하라나니 멀리 상공께서 이에 위엋(간성하오매 슬하를 하기 \n",
+      "없겠가 아리덟에게 꿁어나라 함주지 않음이 다 서보댁 \n",
+      "제사는 안듯(손질의 지북 욭과 난양국주께서 회복 \n",
+      "불바에 세상하며 소유는 바옵나이다. 내 어싯삽 경이 다딴했다. \n",
+      "  계석의 사유임이 분보다 생귀하고 속에 따랐으니 그 뜻은 딸이었다. 소유는 혹시 부르시니 그 속세\n",
+      "  성궁을 말하는 시내를 이니 소저의 집을 말씀들림을 거추에 하면 (화랑하여 첩들에게 매우 그 촉히 된 \n",
+      "것이 또한 꾼일 동벅에서 돌랐고, 남복의 규년 더는 섬과 \n",
+      "같시온적 가처하며 내 난종조기 제종후에들오 \n",
+      "바유부러 진첫을 학으로지 \n",
+      "\n"
      ]
     }
    ],
@@ -328,6 +332,15 @@
     "    print (\"-- RESULT --\")\n",
     "    print (hgtk.text.compose(\"\".join(sampled_text)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
